[package]
name = "musig2"
version = "0.0.11"
edition = "2021"
authors = ["conduition <conduition@proton.me>"]
description = "Flexible Rust implementation of the MuSig2 multisignature protocol, compatible with Bitcoin."
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/conduition/musig2"
keywords = ["musig", "schnorr", "bitcoin", "multisignature", "musig2"]
include = ["/src", "!/src/test_vectors", "*.md"]

[dependencies]
base16ct = { version = "0.2.0", default-features = false, features = ["alloc"] }
hmac = { version = "0.12.1", default-features = false, features = [] }
k256 = { version = "0.13.1", default-features = false, optional = true }
once_cell = { package = "once_cell", branch = "master", git = "https://github.com/mesalock-linux/once_cell-sgx" }
rand = { version = "0.8.5", optional = true, default-features = false, features = ["std_rng"] }
secp = { package = "secp", branch = "sgx", git = "https://github.com/kziemianek/secp.git", default-features = false }
secp256k1 = { version = "0.28.0", optional = true, default-features = false, features = ["alloc"] }
serde = { version = "1.0.188", default-features = false, optional = true }
serdect = { version = "0.2.0", default-features = false, optional = true, features = ["alloc"] }
sha2 = { version = "0.10.7", default-features = false }
subtle = { package = "subtle", branch = "2.5.0-update", git = "https://github.com/kziemianek/subtle-sgx.git", features = ["const-generics"] }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }


[dev-dependencies]
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
csv = "1.3.0"
serdect = "0.2.0"
rand = "0.8.5"
secp = { version = "0.2.0", default-features = false, branch = "sgx", git = "https://github.com/kziemianek/secp.git", features = ["serde", "rand", "secp256k1-invert"]  }

[features]
default = ["secp256k1"]
secp256k1 = ["dep:secp256k1", "secp/secp256k1"]
k256 = ["dep:k256", "secp/k256"]
serde = ["dep:serde", "secp/serde", "dep:serdect"]
rand = ["dep:rand", "secp/rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
